employer my profile page recent jobs added

--- a/src/app/components/common/recent-jobs/recent-jobs.component.html
+++ b/src/app/components/common/recent-jobs/recent-jobs.component.html
@@ -15,7 +15,7 @@
                     <div class="content">
 
                         <div class="job-image">
-                            <a (click)="rJobidPass(rjob[1].id)" routerLink="/job-details">
+                            <a (click)="rJobidPass(rjob[1].id)" routerLink="/jobs/details">
                                 <img src="assets/images/job/job1.jpg" alt="job-image">
                             </a>
                         </div>
