candidate preview page displaying only exp and edu left

--- a/src/app/components/pages/candidate-details-preview-page/candidate-details-preview-page.component.html
+++ b/src/app/components/pages/candidate-details-preview-page/candidate-details-preview-page.component.html
@@ -34,7 +34,7 @@
                             <h3>{{objToArray[0][1].name}}</h3>
                             <!-- <img src="assets/images/flags/switzerland.svg" alt="flag"> -->
                         </div>
-                        <!-- <p>Web Developer</p> -->
+                        <p style="text-transform: capitalize;">{{previewObjCandidate.role}}</p>
                         <!-- <div class="rating">
                             <i class="ri-star-fill"></i>
                             <i class="ri-star-fill"></i>
@@ -76,7 +76,7 @@
                         <ul>
                             <li>
                                 <span>Location</span>
-                                <a href="https://www.google.com/maps/place/New+York,+NY,+USA/@40.6976637,-74.119764,11z/data=!3m1!4b1!4m5!3m4!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!8m2!3d40.7127753!4d-74.0059728" target="_blank">Melbourne, Australia</a>
+                                <a style="text-transform: capitalize;" target="_blank">{{previewObjCandidate.location}}</a>
                             </li>
                             <li>
                                 <span>Email</span>
@@ -111,14 +111,14 @@
                 <div class="candidate-details-desc">
                     <h3>About {{objToArray[0][1].name}}</h3>
                     <div class="bar"></div>
-                    <p>A talented professional with an academic <strong>background</strong> in IT and proven commercial development experience as C++ developer since 1999. Has a sound knowledge of the software development life cycle. Was involved in more than 140 software development outsourcing projects.</p>
-                    <p>Programming Languages: C/C++, .NET C++, Python, Bash, Shell, PERL, Regular expressions, Python, Active-script.</p>
+                    <p style="text-transform: capitalize;">{{previewObjCandidate.headline}}</p>
+                    <p>{{previewObjCandidate.about_me}}</p>
                     <hr>
                     <h3>Work Experience</h3>
                     <div class="bar"></div>
                     <ul class="experience-list">
                         <li>
-                            <img src="assets/images/job/job1.jpg" alt="job-image">
+                            <!-- <img src="assets/images/job/job1.jpg" alt="job-image"> -->
                             <h3>Product Designer</h3>
                             <span>Coding Agency</span>
                             <ul>
@@ -127,7 +127,7 @@
                             </ul>
                         </li>
                         <li>
-                            <img src="assets/images/job/job2.jpg" alt="job-image">
+                            <!-- <img src="assets/images/job/job2.jpg" alt="job-image"> -->
                             <h3>Sr. UI/UX Designer</h3>
                             <span>99 Coding</span>
                             <ul>
@@ -140,19 +140,15 @@
                     <h3>Skills</h3>
                     <div class="bar"></div>
                     <ul class="candidate-skills">
-                        <li>Visual Design</li>
-                        <li>UI/UX Design</li>
-                        <li>Agile</li>
-                        <li>Prototyping</li>
-                        <li>New Layout</li>
-                        <li>Career</li>
+                        <li style="text-transform: capitalize;" *ngFor="let skill of previewObjCandidate.skills">{{skill}}</li>
+                       
                     </ul>
                     <hr>
                     <h3>Education & Training</h3>
                     <div class="bar"></div>
                     <ul class="candidate-education">
                         <li>
-                            <img src="assets/images/icon1.jpg" alt="job-image">
+                            <!-- <img src="assets/images/icon1.jpg" alt="job-image"> -->
                             <h3>Bachelor in Software Engineering</h3>
                             <span>Harvard University</span>
                             <ul>
@@ -161,7 +157,7 @@
                             </ul>
                         </li>
                         <li>
-                            <img src="assets/images/icon2.jpg" alt="job-image">
+                            <!-- <img src="assets/images/icon2.jpg" alt="job-image"> -->
                             <h3>Masters in Art Design</h3>
                             <span>Harvard University</span>
                             <ul>
