--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -38,12 +38,12 @@
 
                         <div class="form-group">
                             <label>What defines you <span>*</span></label>
-                            <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_role" value="" placeholder="Like Web developer, App developer, Finance consultant ..." required>
+                            <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_role" value="{{previewObjCandidate.role}}" placeholder="Like Web developer, App developer, Finance consultant ..." required>
                         </div>
 
                         <div class="form-group">
                             <label>Profile headline <span>*</span></label>
-                            <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_headline" value="" required>
+                            <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_headline" value="{{previewObjCandidate.headline}}" required>
                         </div>
 
 
@@ -55,14 +55,14 @@
                                 <!-- <ngx-editor-menu [editor]="editor" [toolbar]="toolbar">
                                 </ngx-editor-menu>
                                 <ngx-editor [editor]="editor" [placeholder]="'Type here...'" id="description"></ngx-editor> -->
-                           <textarea class="form-control"  style="height:300px;" id="candidate_about_me" required></textarea>
+                           <textarea class="form-control"  style="height:300px;" id="candidate_about_me" value = "{{previewObjCandidate.about_me}}" required></textarea>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Location <span></span></label>
-                            <input type="text" class="form-control" style="text-transform: capitalize;" id="candidate_location">
+                            <input type="text" class="form-control" style="text-transform: capitalize;" value="{{previewObjCandidate.location}}" id="candidate_location">
                             <!-- <select class="form-select" id="category_id">
                                 
                                 <option selected>Accounting / Finance</option>
@@ -102,7 +102,7 @@
                             <select class="form-select" id="candidate_gender" required>
                                 <!-- <option selected>Both</option> -->
                                 <option value="Female">Female</option>
-                                <option selected value="Male">Male</option>
+                                <option selected value="{{previewObjCandidate.gender}}">Male</option>
                                 <option value="Other">Others</option>
 
                             </select>
@@ -179,42 +179,42 @@
                     <div class="col-lg-6 col-md-6">
                          <div class="form-group">
                              <label>Skills (separate with commas) <span>*</span></label>
-                             <input type="text" style="text-transform: capitalize;" class="form-control" required>
+                             <input type="text" id = "CandidateSkills" style="text-transform: capitalize;" value = "{{previewObjCandidate.skills}}" class="form-control" required>
                          </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
                          <div class="form-group">
                              <label>Facebook profile <span></span></label>
-                             <input type="text" id="fbProfile" style="text-transform: capitalize;" class="form-control">
+                             <input type="text" id="fbProfile" value = "{{previewObjCandidate.fb}}" class="form-control">
                          </div>
                     </div>
                     
                     <div class="col-lg-6 col-md-6">
                          <div class="form-group">
                              <label> Twitter profile<span></span></label>
-                             <input type="text" id="tweetProfile" style="text-transform: capitalize;" class="form-control">
+                             <input type="text" id="tweetProfile" value = "{{previewObjCandidate.twitter}}" class="form-control">
                          </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
                          <div class="form-group">
                              <label>Instagram profile <span></span></label>
-                             <input type="text" id="instaProfile" style="text-transform: capitalize;" class="form-control">
+                             <input type="text" id="instaProfile" value = "{{previewObjCandidate.insta}}" class="form-control">
                          </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
                          <div class="form-group">
                              <label> Linkedin profile<span></span></label>
-                             <input type="text" id="linkedinProfile" style="text-transform: capitalize;" class="form-control">
+                             <input type="text" id="linkedinProfile" value = "{{previewObjCandidate.linkedin}}" class="form-control">
                          </div>
                     </div>
 
                     <div class="col-lg-12 col-md-6">
                          <div class="form-group">
                              <label> Behance profile<span></span></label>
-                             <input type="text" id="behanceProfile" style="text-transform: capitalize;" class="form-control">
+                             <input type="text" id="behanceProfile" value = "{{previewObjCandidate.behance}}" class="form-control">
                          </div>
                     </div>
 
