--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -12,16 +12,16 @@
                         <ul class="footer-contact-list">
                             <li>
                                 <i class="ri-map-pin-line"></i>
-                                <a href="https://goo.gl/maps/muUSCY6FnusqhrGK9" target="_blank">328 Queensberry Street, North Melbourne VIC</a>
+                                <a href="https://goo.gl/maps/9FreR1rVLxe5HgHB7" target="_blank">Mumbai, Maharastra, India</a>
                             </li>
                             <li>
                                 <i class="ri-mail-line"></i>
-                                <a href="mailto:workfromhome.com">workfromhome.com</a>
+                                <a href="mailto:wfhworld@gmail.com">wfhworld@gmail.com</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <i class="ri-phone-line"></i>
                                 <a href="tel:+4471234567890">+44 4325 9878 5875</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
