--- a/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
+++ b/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
@@ -90,24 +90,25 @@
                         </ul>
                     </div>
                     
-                    <div class="download-resume">
+                    <!-- <div class="download-resume">
                         <h3>Download Resume</h3>
                         <a href="javascript:void(0)" class="download-btn">PDF Formate CV <i class="ri-file-download-line"></i></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-lg-9 col-md-12">
                 <div class="candidate-details-desc">
                     <h3>About {{objToArray[0][1].name}}</h3>
                     <div class="bar"></div>
-                    <p>A talented professional with an academic <strong>background</strong> in IT and proven commercial development experience as C++ developer since 1999. Has a sound knowledge of the software development life cycle. Was involved in more than 140 software development outsourcing projects.</p>
-                    <p>Programming Languages: C/C++, .NET C++, Python, Bash, Shell, PERL, Regular expressions, Python, Active-script.</p>
+                    <p>
+                        {{objToArray[0][1].about}}
+                    </p>
                     <hr>
                     <h3>Work Experience</h3>
                     <div class="bar"></div>
                     <ul class="experience-list">
                         <li>
-                            <img src="assets/images/job/job1.jpg" alt="job-image">
+                            <!-- <img src="assets/images/job/job1.jpg" alt="job-image"> -->
                             <h3>Product Designer</h3>
                             <span>Coding Agency</span>
                             <ul>
@@ -115,15 +116,7 @@
                                 <li><i class="ri-map-pin-line"></i> New York, USA</li>
                             </ul>
                         </li>
-                        <li>
-                            <img src="assets/images/job/job2.jpg" alt="job-image">
-                            <h3>Sr. UI/UX Designer</h3>
-                            <span>99 Coding</span>
-                            <ul>
-                                <li><i class="ri-time-line"></i> Jun 2019 - April 2021 - 2 Years</li>
-                                <li><i class="ri-map-pin-line"></i> San Antonio, TX</li>
-                            </ul>
-                        </li>
+           
                     </ul>
                     <hr>
                     <h3>Skills</h3>
