--- a/src/app/components/pages/candidate-details-page/candidate-details-page.component.scss
+++ b/src/app/components/pages/candidate-details-page/candidate-details-page.component.scss
@@ -232,7 +232,7 @@
             bottom: 0;
         };
         li {
-            padding-left: 108px;
+            // padding-left: 108px;
             margin-bottom: 25px;
             position: relative;
 
