--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -313,7 +313,7 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-sm-6 col-md-6">
-                <div class="job-card" *ngFor="let empjob of empDashArray" style="padding-bottom: 2px;">
+                <div class="job-card" *ngFor="let empjob of empDashLimitArray" style="padding-bottom: 2px;">
                     <div class="content">
                         <div class="job-image">
                             <a
